--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "normalize.css": "^8.0.1",
+    "uuid": "^9.0.1",
     "vant": "^2.13.2",
     "vue": "^2.6.14"
   },
