--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "default-passive-events": "^2.0.0",
+    "loadash": "^1.0.0",
     "normalize.css": "^8.0.1",
     "uuid": "^9.0.1",
     "vant": "^2.13.2",
